[project]
name = "pan1ni"
version = "0.1.0"
description = "Goal-conditioned action-free LeWorldModel research scaffold for NetHack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.11.1",
    "minihack>=1.0.2",
    "nle>=1.3.0",
    "pillow>=11.0.0",
    "setuptools<81",
    "torch>=2.13.0",
]

[project.scripts]
pan1ni = "pan1ni.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pan1ni"]
